change payload to work correctly for db
